--- a/IlmApp/app/src/debug/res/values/google_maps_api.xml
+++ b/IlmApp/app/src/debug/res/values/google_maps_api.xml
@@ -9,6 +9,8 @@ https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend
     You can also add your credentials to an existing key, using this line:
     A7:FB:E6:D6:59:CC:88:72:C4:66:E7:F0:07:52:14:95:45:1E:89:E3;de.sd.ilmapp
 
+    AB:29:96:5E:D8:A2:B3:52:65:E4:62:BF:9A:E9:D0:1F:9B:1A:D4:1F;de.sd.ilmapp
+
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
